<resources>
    <string name="app_name">User Finder</string>
    <!--User list-->
    <string name="activity_list_title">User\'s list</string>
    <string name="user_email_title">Email:</string>
    <string name="user_login_title">Login:</string>
    <string name="user_phone_title">Phone:</string>
    <string name="user_gender_title">Gender</string>
    <string name="user_password_title">Password:</string>
    <string name="user_sha1_title">SHA1:</string>
    <string name="snack_user_list_updated">List is updated. User count: </string>

</resources>
