<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_user_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:cardCornerRadius="6dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_user_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/user_name"
            style="@style/UserCardTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

        <TextView
            android:id="@+id/user_login"
            style="@style/UserCardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator" />

        <TextView
            android:id="@+id/user_login_value"
            style="@style/UserCardValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/user_login"
            app:layout_constraintLeft_toRightOf="@id/user_login"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/user_password"
            style="@style/UserCardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_password_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_login" />

        <TextView
            android:id="@+id/user_password_value"
            style="@style/UserCardValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/user_password"
            app:layout_constraintLeft_toRightOf="@id/user_password"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/user_email"
            style="@style/UserCardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_password" />

        <TextView
            android:id="@+id/user_email_value"
            style="@style/UserCardValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/user_email"
            app:layout_constraintLeft_toRightOf="@id/user_email"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/user_phone"
            style="@style/UserCardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_phone_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_email" />

        <TextView
            android:id="@+id/user_phone_value"
            style="@style/UserCardValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/user_phone"
            app:layout_constraintLeft_toRightOf="@id/user_phone"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/user_gender"
            style="@style/UserCardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_gender_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_phone" />

        <TextView
            android:id="@+id/user_gender_value"
            style="@style/UserCardValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/user_gender"
            app:layout_constraintLeft_toRightOf="@id/user_gender"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/user_sha1"
            style="@style/UserCardTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_sha1_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_gender" />

        <TextView
            android:id="@+id/user_sha1_value"
            style="@style/UserCardValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/user_sha1"
            app:layout_constraintLeft_toRightOf="@id/user_sha1"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>